--- a/maps/map_server_params.yaml
+++ b/maps/map_server_params.yaml
@@ -1,4 +1,13 @@
 # map_server_params.yaml
 map_server:
     ros__parameters:
-        yaml_filename: "/home/amr-orin-0/mfi_amr_ws/src/nav2_map_server_start/maps/map.yaml"
+    	use_sim_time: False
+        yaml_filename: "map.yaml"
+
+map_saver:
+  ros__parameters:
+    use_sim_time: True
+    save_map_timeout: 5000
+    free_thresh_default: 0.25
+    occupied_thresh_default: 0.65
+    map_subscribe_transient_local: False
