--- a/package.xml
+++ b/package.xml
@@ -14,6 +14,8 @@
   <exec_depend>ros2launch</exec_depend>
 
   <export>
+    <launch file="launch/nav2_map_server_start.launch.py"/>
     <build_type>ament_cmake</build_type>
   </export>
+  
 </package>
