--- a/maps/map.yaml
+++ b/maps/map.yaml
@@ -1,6 +1,6 @@
 image: map.pgm
 resolution: 0.050000
-origin: [-27.750000, -31.250000, -nan]
+origin: [-27.750000, -31.250000, 0]
 negate: 0
 occupied_thresh: 0.65
 free_thresh: 0.196
