added one shot launch file to start map_server, rviz and ensure rviz gets map

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -21,6 +21,7 @@ find_package(ament_cmake REQUIRED)
 # Install launch files
 install(DIRECTORY launch
   maps
+  configs
   DESTINATION share/${PROJECT_NAME}/
 )
 
