--- a/maps/map_server_params.yaml
+++ b/maps/map_server_params.yaml
@@ -1,4 +1,5 @@
 # map_server_params.yaml
+
 map_server:
   ros__parameters:
     use_sim_time: False
@@ -6,8 +7,9 @@ map_server:
 
 map_saver:
   ros__parameters:
-    use_sim_time: True
+    use_sim_time: False
     save_map_timeout: 5000
     free_thresh_default: 0.25
     occupied_thresh_default: 0.65
     map_subscribe_transient_local: False
+
