--- a/configs/nav2_common_params.yaml
+++ b/configs/nav2_common_params.yaml
@@ -184,7 +184,7 @@ global_costmap:
       robot_base_frame: robot2/base_footprint
       footprint_padding: 0.
       footprint:  "[ [0.45,0.4],[-0.45,0.4],[-0.45,-0.4],[0.45,-0.4] ]"
-      use_sim_time: True
+      use_sim_time: False
       # robot_radius: 0.22
       resolution: 0.05
       track_unknown_space: true
@@ -247,7 +247,7 @@ behavior_server:
     global_frame: robot2/odom
     robot_base_frame: robot2/base_link
     transform_timeout: 0.1
-    use_sim_time: true
+    use_sim_time: False
     simulate_ahead_time: 2.0
     max_rotational_vel: 0.5
     min_rotational_vel: 0.3
