--- a/configs/nav2_common_params_v2.yaml
+++ b/configs/nav2_common_params_v2.yaml
@@ -1,46 +1,37 @@
-amcl:
-  ros__parameters:
-    enabled: False
-
 bt_navigator:
   ros__parameters:
     use_sim_time: False
     global_frame: map
-    robot_base_frame: robot2/base_link
-    odom_topic: robot2/odom
+    robot_base_frame: base_link
+    odom_topic: /odom
     bt_loop_duration: 10
     default_server_timeout: 20
+    enable_groot_monitoring: True
     groot_zmq_publisher_port: 1666
     groot_zmq_server_port: 1667
     plugin_lib_names:
     - nav2_compute_path_to_pose_action_bt_node
     - nav2_compute_path_through_poses_action_bt_node
-    - nav2_smooth_path_action_bt_node
     - nav2_follow_path_action_bt_node
+    - nav2_back_up_action_bt_node
     - nav2_spin_action_bt_node
     - nav2_wait_action_bt_node
-    - nav2_back_up_action_bt_node
-    - nav2_drive_on_heading_bt_node
     - nav2_clear_costmap_service_bt_node
     - nav2_is_stuck_condition_bt_node
     - nav2_goal_reached_condition_bt_node
     - nav2_goal_updated_condition_bt_node
-    - nav2_globally_updated_goal_condition_bt_node
-    - nav2_is_path_valid_condition_bt_node
     - nav2_initial_pose_received_condition_bt_node
     - nav2_reinitialize_global_localization_service_bt_node
     - nav2_rate_controller_bt_node
     - nav2_distance_controller_bt_node
     - nav2_speed_controller_bt_node
     - nav2_truncate_path_action_bt_node
-    - nav2_truncate_path_local_action_bt_node
     - nav2_goal_updater_node_bt_node
     - nav2_recovery_node_bt_node
     - nav2_pipeline_sequence_bt_node
     - nav2_round_robin_node_bt_node
     - nav2_transform_available_condition_bt_node
     - nav2_time_expired_condition_bt_node
-    - nav2_path_expiring_timer_condition
     - nav2_distance_traveled_condition_bt_node
     - nav2_single_trigger_bt_node
     - nav2_is_battery_low_condition_bt_node
@@ -50,18 +41,8 @@ bt_navigator:
     - nav2_planner_selector_bt_node
     - nav2_controller_selector_bt_node
     - nav2_goal_checker_selector_bt_node
-    - nav2_controller_cancel_bt_node
-    - nav2_path_longer_on_approach_bt_node
-    - nav2_wait_cancel_bt_node
-    - nav2_spin_cancel_bt_node
-    - nav2_back_up_cancel_bt_node
-    - nav2_drive_on_heading_cancel_bt_node
 
-bt_navigator_navigate_through_poses_rclcpp_node:
-  ros__parameters:
-    use_sim_time: False
-
-bt_navigator_navigate_to_pose_rclcpp_node:
+bt_navigator_rclcpp_node:
   ros__parameters:
     use_sim_time: False
 
@@ -71,14 +52,11 @@ controller_server:
     controller_plugins: ["FollowPath"]
     controller_frequency: 100.0
     controller_plugin_types: ["neo_local_planner::NeoLocalPlanner"]
-    goal_checker_plugins: ["general_goal_checker"]
-    progress_checker_plugin: "progress_checker"
-    use_sim_time: False
     progress_checker:
       plugin: "nav2_controller::SimpleProgressChecker"
       required_movement_radius: 0.5
       movement_time_allowance: 100.0
-    general_goal_checker:
+    goal_checker:
       plugin: "nav2_controller::SimpleGoalChecker"
       xy_goal_tolerance: 0.05
       yaw_goal_tolerance: 0.05
@@ -117,40 +95,21 @@ controller_server:
       max_backup_dist : 0.0
       min_stop_dist : 0.2
       differential_drive : false
-      allow_reversing: false
 
-      # plugin: "nav2_regulated_pure_pursuit_controller::RegulatedPurePursuitController"
-      # desired_linear_vel: 0.5
-      # max_linear_accel: 0.8
-      # max_linear_decel: 0.8
-      # lookahead_dist: 0.6
-      # min_lookahead_dist: 0.3 #0.3
-      # max_lookahead_dist: 0.9 #0.9
-      # lookahead_time: 1.5 #1.5
-      # rotate_to_heading_angular_vel: 0.9
-      # transform_tolerance: 0.1
-      # use_velocity_scaled_lookahead_dist: false
-      # min_approach_linear_velocity: 0.01
-      # use_approach_linear_velocity_scaling: true
-      # max_allowed_time_to_collision: 1.0
-      # use_regulated_linear_velocity_scaling: true
-      # use_cost_regulated_linear_velocity_scaling: false
-      # regulated_linear_scaling_min_radius:  0.9
-      # regulated_linear_scaling_min_speed: 0.25
-      # use_rotate_to_heading: false
-      # rotate_to_heading_min_angle: 0.785
-      # max_angular_accel: 1.0
-      # allow_reversing: true
+controller_server_rclcpp_node:
+  ros__parameters:
+    use_sim_time: False
 
 local_costmap:
   local_costmap:
     ros__parameters:
       update_frequency: 10.0
       publish_frequency: 1.0
-      global_frame: robot2/odom
-      robot_base_frame: robot2/base_footprint
+      global_frame: odom
+      robot_base_frame: base_footprint
       footprint_padding: 0.
       footprint:  "[ [0.45,0.4],[-0.45,0.4],[-0.45,-0.4],[0.45,-0.4] ]"
+      use_sim_time: False
       rolling_window: true
       width: 5
       height: 5
@@ -164,16 +123,26 @@ local_costmap:
       obstacle_layer:
         plugin: "nav2_costmap_2d::ObstacleLayer"
         enabled: True
-        observation_sources: scan
+        observation_sources: scan scan1
         scan:
-          topic: robot2/scan
+          topic: /scan
           max_obstacle_height: 2.0
           clearing: True
           marking: True
           data_type: "LaserScan"
-          sensor_frame: "lidar_1_link"
+        scan1:
+          topic: /scan2
+          max_obstacle_height: 2.0
+          clearing: True
+          marking: True
+          data_type: "LaserScan"
       always_send_full_costmap: True
-
+  local_costmap_client:
+    ros__parameters:
+      use_sim_time: False
+  local_costmap_rclcpp_node:
+    ros__parameters:
+      use_sim_time: False
 
 global_costmap:
   global_costmap:
@@ -181,7 +150,7 @@ global_costmap:
       update_frequency: 0.4
       publish_frequency: 1.0
       global_frame: map
-      robot_base_frame: robot2/base_footprint
+      robot_base_frame: base_footprint
       footprint_padding: 0.
       footprint:  "[ [0.45,0.4],[-0.45,0.4],[-0.45,-0.4],[0.45,-0.4] ]"
       use_sim_time: False
@@ -192,9 +161,15 @@ global_costmap:
       obstacle_layer:
         plugin: "nav2_costmap_2d::ObstacleLayer"
         enabled: True
-        observation_sources: scan
+        observation_sources: scan scan1
         scan:
-          topic: robot2/scan
+          topic: /scan
+          max_obstacle_height: 2.0
+          clearing: True
+          marking: True
+          data_type: "LaserScan"
+        scan1:
+          topic: /scan2
           max_obstacle_height: 2.0
           clearing: True
           marking: True
@@ -207,11 +182,17 @@ global_costmap:
         cost_scaling_factor: 4.0
         inflation_radius: 1.0
       always_send_full_costmap: True
+  global_costmap_client:
+    ros__parameters:
+      use_sim_time: False
+  global_costmap_rclcpp_node:
+    ros__parameters:
+      use_sim_time: False
 
 map_server:
   ros__parameters:
     use_sim_time: False
-    yaml_filename: "map.yaml"
+    yaml_filename: "neo_track1.yaml"
 
 map_saver:
   ros__parameters:
@@ -232,26 +213,34 @@ planner_server:
       use_astar: false
       allow_unknown: true
 
-behavior_server:
+planner_server_rclcpp_node:
+  ros__parameters:
+    use_sim_time: False
+
+recoveries_server:
   ros__parameters:
     costmap_topic: local_costmap/costmap_raw
     footprint_topic: local_costmap/published_footprint
     cycle_frequency: 10.0
-    behavior_plugins: ["spin", "backup", "wait"]
+    recovery_plugins: ["spin", "backup", "wait"]
     spin:
-      plugin: "nav2_behaviors/Spin"
+      plugin: "nav2_recoveries/Spin"
     backup:
-      plugin: "nav2_behaviors/BackUp"
+      plugin: "nav2_recoveries/BackUp"
     wait:
-      plugin: "nav2_behaviors/Wait"
-    global_frame: robot2/odom
-    robot_base_frame: robot2/base_link
+      plugin: "nav2_recoveries/Wait"
+    global_frame: odom
+    robot_base_frame: base_link
     transform_timeout: 0.1
     use_sim_time: False
     simulate_ahead_time: 2.0
-    max_rotational_vel: 0.5
-    min_rotational_vel: 0.3
-    rotational_acc_lim: 0.8
+    max_rotational_vel: 1.0
+    min_rotational_vel: 0.4
+    rotational_acc_lim: 3.2
+
+robot_state_publisher:
+  ros__parameters:
+    use_sim_time: False
 
 waypoint_follower:
   ros__parameters:
