--- a/maps/map.yaml
+++ b/maps/map.yaml
@@ -1,7 +1,8 @@
 image: map.pgm
 resolution: 0.050000
 # origin: [-27.750000, -31.250000, 0] # x, y, thetha
-origin: [-31.50, 26.0, -1.51]
+origin: [0, 0, 0]
+#origin: [-31.50, 26.0, -1.51]
 negate: 0
 occupied_thresh: 0.65
 free_thresh: 0.196
