--- a/configs/nav2_common_params.yaml
+++ b/configs/nav2_common_params.yaml
@@ -6,8 +6,8 @@ bt_navigator:
   ros__parameters:
     use_sim_time: False
     global_frame: map
-    robot_base_frame: robot2/base_link
-    odom_topic: robot2/odom
+    robot_base_frame: robot1/base_link
+    odom_topic: robot1/odom
     bt_loop_duration: 10
     default_server_timeout: 20
     groot_zmq_publisher_port: 1666
@@ -158,9 +158,9 @@ local_costmap:
     ros__parameters:
       update_frequency: 5.0
       publish_frequency: 2.0
-      # global_frame: robot2/odom
-      global_frame: map
-      robot_base_frame: robot2/base_link
+      global_frame: robot1/odom
+      #global_frame: inter_map
+      robot_base_frame: robot1/base_footprint
       footprint_padding: 0.
       footprint:  "[ [0.45,0.4],[-0.45,0.4],[-0.45,-0.4],[0.45,-0.4] ]"
       rolling_window: true
@@ -168,7 +168,10 @@ local_costmap:
       height: 5
       resolution: 0.02
       # robot_radius: 0.22
-      plugins: ["obstacle_layer", "inflation_layer"]
+      plugins: ["static_layer", "obstacle_layer", "inflation_layer"]
+      static_layer:
+        plugin: "nav2_costmap_2d::StaticLayer"
+        map_subscribe_transient_local: True
       inflation_layer:
         plugin: "nav2_costmap_2d::InflationLayer"
         cost_scaling_factor: 4.0
@@ -176,14 +179,21 @@ local_costmap:
       obstacle_layer:
         plugin: "nav2_costmap_2d::ObstacleLayer"
         enabled: True
-        observation_sources: scan_1
-        scan_1:
-          topic: robot2/lidar_1/scan
+        observation_sources: scan1 scan2
+        scan1:
+          topic: /robot1/lidar_1/scan
           max_obstacle_height: 2.0
           clearing: True
           marking: True
           data_type: "LaserScan"
-          sensor_frame: "robot2/lidar_1_link"
+          sensor_frame: "robot1/lidar_1_link"
+        scan2:
+          topic: /scan
+          max_obstacle_height: 2.0
+          clearing: True
+          marking: True
+          data_type: "LaserScan"
+          sensor_frame: "velodyne"
       always_send_full_costmap: True
 
 
@@ -193,7 +203,7 @@ global_costmap:
       update_frequency: 1.0
       publish_frequency: 1.0
       global_frame: map
-      robot_base_frame: robot2/base_link
+      robot_base_frame: robot1/base_link
       footprint_padding: 0.
       footprint:  "[ [0.45,0.4],[-0.45,0.4],[-0.45,-0.4],[0.45,-0.4] ]"
       use_sim_time: False
@@ -204,14 +214,21 @@ global_costmap:
       obstacle_layer:
         plugin: "nav2_costmap_2d::ObstacleLayer"
         enabled: True
-        observation_sources: scan_1
-        scan_1:
-          topic: robot2/lidar_1/scan
+        observation_sources: scan1 scan2
+        scan1:
+          topic: /robot1/lidar_1/scan
           max_obstacle_height: 2.0
           clearing: True
           marking: True
           data_type: "LaserScan"
-          sensor_frame: "robot2/lidar_1_link"
+          sensor_frame: "robot1/lidar_1_link"
+        scan2:
+          topic: /scan
+          max_obstacle_height: 2.0
+          clearing: True
+          marking: True
+          data_type: "LaserScan"
+          sensor_frame: "velodyne"
       static_layer:
         plugin: "nav2_costmap_2d::StaticLayer"
         map_subscribe_transient_local: True
@@ -220,6 +237,8 @@ global_costmap:
         cost_scaling_factor: 4.0
         inflation_radius: 1.0
       always_send_full_costmap: True
+      origin_x: -31.5
+      origin_y: 26.0
 
 map_server:
   ros__parameters:
@@ -257,8 +276,8 @@ behavior_server:
       plugin: "nav2_behaviors/BackUp"
     wait:
       plugin: "nav2_behaviors/Wait"
-    global_frame: robot2/odom
-    robot_base_frame: robot2/base_link
+    global_frame: robot1/odom
+    robot_base_frame: robot1/base_link
     transform_timeout: 0.1
     use_sim_time: False
     simulate_ahead_time: 2.0
